--- a/nautilus-file-management-properties.desktop.in
+++ b/nautilus-file-management-properties.desktop.in
@@ -3,7 +3,7 @@ Encoding=UTF-8
 _Name=File Management
 _Comment=Change how files are managed
 Exec=nautilus-file-management-properties
-Icon=gnome-fs-directory
+Icon=file-manager
 Terminal=false
 Type=Application
 StartupNotify=true
