--- a/.cvsignore
+++ b/.cvsignore
@@ -23,7 +23,9 @@ ltconfig
 ltmain.sh
 nautilus.desktop
 nautilus.spec
+nautilus-computer.desktop
 nautilus-file-management-properties.desktop
+nautilus-home.desktop
 obj
 stamp-h
 stamp-h.in
