--- a/nautilus.desktop.in
+++ b/nautilus.desktop.in
@@ -8,6 +8,7 @@ Icon=file-manager
 Terminal=false
 Type=Application
 Categories=Application;Core;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
