--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -4,7 +4,8 @@ _Name=Network Servers
 _Comment=View your network servers in the Nautilus file manager
 TryExec=nautilus
 Exec=nautilus network:
-Terminal=0
+Terminal=false
 Type=Application
 Icon=gnome-fs-network
 Categories=Application;Core;
+OnlyShowIn=GNOME;
