Allow setting to not show volumes on desktop.
2004-05-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-desktop-link-monitor.c:
	(create_volume_link), (desktop_volumes_visible_changed),
	(nautilus_desktop_link_monitor_init),
	(desktop_link_monitor_finalize):
	* libnautilus-private/nautilus-global-preferences.h:
	Allow setting to not show volumes on desktop.

	Patch by Davyd Madeley <davyd@zdlcomputing.com>

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -808,6 +808,21 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/nautilus/desktop/volumes_visible</key>
+      <applyto>/apps/nautilus/desktop/volumes_visible</applyto>
+      <owner>nautilus</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+      	<short>Show mounted volumes on the desktop</short>
+	<long>
+	  If this is set to true, icons linking to mounted
+	  volumes will be put on the desktop.
+	</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/nautilus/desktop/home_icon_name</key>
       <applyto>/apps/nautilus/desktop/home_icon_name</applyto>
       <owner>nautilus</owner>
