--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -74,6 +74,7 @@ src/Nautilus_shell.server.in
 src/file-manager/fm-bonobo-provider.c
 src/file-manager/fm-desktop-icon-view.c
 src/file-manager/fm-directory-view.c
+src/file-manager/fm-ditem-page.c
 src/file-manager/fm-error-reporting.c
 src/file-manager/fm-icon-container.c
 src/file-manager/fm-icon-view.c
