Add preference to choose date format. Set default date format to '%c',
2004-07-15  Jürg Billeter  <j@bitron.ch>

 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
 	* libnautilus-private/nautilus-directory.c: (add_preferences_callbacks):
 	* libnautilus-private/nautilus-file.c: (date_format_changed_callback),
 	(nautilus_file_fit_date_as_string):
 	* libnautilus-private/nautilus-global-preferences.c:
 	* libnautilus-private/nautilus-global-preferences.h:
 	* src/nautilus-file-management-properties.c: (create_date_format_menu),
 	(nautilus_file_management_properties_dialog_setup):
 	* src/nautilus-file-management-properties.glade:
 	Add preference to choose date format. Set default date format to '%c',
 	'the preferred representation for the current locale'.

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -629,6 +629,21 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/nautilus/preferences/date_format</key>
+      <applyto>/apps/nautilus/preferences/date_format</applyto>
+      <owner>nautilus</owner>
+      <type>string</type>
+      <default>locale</default>
+      <locale name="C">
+         <short>Date Format</short>
+         <long>
+             The format of file dates. Possible values are "locale",
+             "iso", and "informal".
+         </long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/nautilus/preferences/hide_built_in_bookmarks</key>
       <applyto>/apps/nautilus/preferences/hide_built_in_bookmarks</applyto>
       <owner>nautilus</owner>
