--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -762,22 +762,6 @@
     </schema>
     
     <schema>
-      <key>/schemas/apps/nautilus/preferences/add_to_session</key>
-      <applyto>/apps/nautilus/preferences/add_to_session</applyto>
-      <owner>nautilus</owner>
-      <type>bool</type>
-      <default>true</default>
-      <locale name="C">
-         <short>Add Nautilus to session</short>
-         <long>
-          If this is set to true, Nautilus adds itself to the session
-	  when it starts up. This means it will be started the next
-	  time you log in.
-         </long>
-      </locale>
-    </schema>
-
-    <schema>
       <key>/schemas/apps/nautilus/desktop/home_icon_visible</key>
       <applyto>/apps/nautilus/desktop/home_icon_visible</applyto>
       <owner>nautilus</owner>
@@ -834,6 +818,20 @@
 	  If this is set to true, icons linking to mounted
 	  volumes will be put on the desktop.
 	</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/desktop/computer_icon_name</key>
+      <applyto>/apps/nautilus/desktop/computer_icon_name</applyto>
+      <owner>nautilus</owner>
+      <type>string</type>
+      <locale name="C">
+         <short>Desktop computer icon name</short>
+         <long>
+          This name can be set if you want a custom name
+	  for the computer icon on the desktop.
+         </long>
       </locale>
     </schema>
 
