--- a/nautilus.desktop.in
+++ b/nautilus.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Browse Filesystem
+_Name=File Browser
 _Comment=Browse the filesystem with the file manager
 TryExec=nautilus
 Exec=nautilus --no-desktop --browser
