Added "ta" to ALL_LINGUAS.
2004-09-11  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ta" to ALL_LINGUAS.

--- a/configure.in
+++ b/configure.in
@@ -96,7 +96,7 @@ PKG_CHECK_MODULES(ALL, \
 	$STARTUP_NOTIFICATION_PACKAGE)
 dnl ==========================================================================
 
-ALL_LINGUAS="af am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id is it ja ko li lt lv mi mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru sk sl sq sr sr@ije sr@Latn sv th tk tr uk vi wa yi zh_CN zh_TW"
+ALL_LINGUAS="af am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id is it ja ko li lt lv mi mk ml mn ms nb ne nl nn no pa pl pt pt_BR ro ru sk sl sq sr sr@Latn sr@ije sv ta th tk tr uk vi wa yi zh_CN zh_TW"
 
 GETTEXT_PACKAGE=nautilus
 AC_SUBST(GETTEXT_PACKAGE)
