--- a/src/file-manager/Makefile.am
+++ b/src/file-manager/Makefile.am
@@ -15,36 +15,35 @@ INCLUDES = 					\
 
 
 libnautilus_file_manager_la_SOURCES=	\
-	fm-bonobo-provider.c            \
 	fm-desktop-icon-view.c		\
-	fm-directory-view.c		\
-	fm-ditem-page.c			\
-	fm-error-reporting.c		\
-	fm-icon-container.c		\
-	fm-icon-view.c			\
-	fm-list-model.c			\
-	fm-list-view.c			\
-	fm-properties-window.c		\
-	fm-search-list-view.c		\
-	nautilus-indexing-info.c	\
-	fm-tree-model.c			\
-	fm-tree-view.c			\
-	fm-bonobo-provider.h 		\
 	fm-desktop-icon-view.h 		\
+	fm-directory-view.c		\
 	fm-directory-view.h 		\
+	fm-ditem-page.c			\
 	fm-ditem-page.h			\
+	fm-error-reporting.c		\
 	fm-error-reporting.h 		\
+	fm-icon-container.c		\
 	fm-icon-container.h		\
+	fm-icon-view.c			\
 	fm-icon-view.h 			\
+	fm-list-model.c			\
 	fm-list-model.h			\
 	fm-list-view-private.h 		\
+	fm-list-view.c			\
 	fm-list-view.h 			\
+	fm-properties-window.c		\
 	fm-properties-window.h 		\
-	fm-search-list-view.h 		\
-	nautilus-indexing-info.h 	\
+	fm-tree-model.c			\
 	fm-tree-model.h			\
-	fm-tree-view.h			\
+	nautilus-indexing-info.c	\
+	nautilus-indexing-info.h 	\
 	$(NULL)
+
+# temp commented out:
+#	fm-tree-view.c			\
+#	fm-tree-view.h			\
+
 
 uidir = $(datadir)/gnome-2.0/ui
 ui_DATA =					\
