Fix crash when switching view.
2004-11-05  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c:
	Fix crash when switching view.

	* src/nautilus-history-sidebar.c:
	Some cleanups

	* src/nautilus-navigation-window.c:
	Fix unref-null warning

	* src/Makefile.am:
	* src/nautilus-application.c:
	* src/nautilus-notes-sidebar.[ch]:
	Add notes sidebar widget, based on old component

	* components/Makefile.am (SUBDIRS):
	Remove notes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -85,6 +85,8 @@ nautilus_SOURCES = \
 	nautilus-navigation-window-menus.c      \
 	nautilus-navigation-window.c            \
 	nautilus-navigation-window.h            \
+	nautilus-notes-sidebar.c		\
+	nautilus-notes-sidebar.h		\
 	nautilus-profiler.c			\
 	nautilus-profiler.h			\
 	nautilus-property-browser.c     	\
