Add emblem sidebar, based on old compontent now uses NautilusSignaller to
2004-11-05  Alexander Larsson  <alexl@redhat.com>

	* src/Makefile.am:
	* src/nautilus-emblem-sidebar.[ch]:
	* src/nautilus-application.c:
	Add emblem sidebar, based on old compontent
	now uses NautilusSignaller to detect/signal emblem changes

	* src/nautilus-property-browser.c:
	Catch the emblems_changed signal and refresh

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -64,6 +64,8 @@ nautilus_SOURCES = \
 	nautilus-connect-server-dialog.h	\
 	nautilus-desktop-window.c		\
 	nautilus-desktop-window.h		\
+	nautilus-emblem-sidebar.c		\
+	nautilus-emblem-sidebar.h		\
 	nautilus-file-management-properties.c	\
 	nautilus-file-management-properties.h	\
 	nautilus-first-time-druid.c		\
