Remove emblem subdir
2004-11-08  Alexander Larsson  <alexl@redhat.com>

	* components/Makefile.am:
	Remove emblem subdir

	* libnautilus-private/nautilus-window-info.[ch]:
	* src/nautilus-window.c: (nautilus_window_set_hidden_files_mode):
	hidden_files_mode_changed signal

	* src/file-manager/Makefile.am:
	* src/file-manager/fm-tree-view.[ch]:
	* src/nautilus-application.c: (nautilus_application_instance_init):
	Make tree view work with new system.

	* src/nautilus-window-manage-views.c: (load_new_location),
	(location_has_really_changed):
	Only emit loading_uri after load_underway has been reported.

--- a/src/file-manager/Makefile.am
+++ b/src/file-manager/Makefile.am
@@ -36,13 +36,11 @@ libnautilus_file_manager_la_SOURCES=	\
 	fm-properties-window.h 		\
 	fm-tree-model.c			\
 	fm-tree-model.h			\
+	fm-tree-view.c			\
+	fm-tree-view.h			\
 	nautilus-indexing-info.c	\
 	nautilus-indexing-info.h 	\
 	$(NULL)
-
-# temp commented out:
-#	fm-tree-view.c			\
-#	fm-tree-view.h			\
 
 
 uidir = $(datadir)/gnome-2.0/ui
