Turn NautilusNotesSidebar into NautilusNotesViewer that is also a property
2004-11-08  Alexander Larsson  <alexl@redhat.com>

	* src/Makefile.am:
	* src/nautilus-application.c: (nautilus_application_instance_init):
	* src/nautilus-notes-sidebar.[ch]:
	* src/nautilus-notes-viewer.[ch]:
	Turn NautilusNotesSidebar into NautilusNotesViewer that is also a
	property page

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -87,8 +87,8 @@ nautilus_SOURCES = \
 	nautilus-navigation-window-menus.c      \
 	nautilus-navigation-window.c            \
 	nautilus-navigation-window.h            \
-	nautilus-notes-sidebar.c		\
-	nautilus-notes-sidebar.h		\
+	nautilus-notes-viewer.c			\
+	nautilus-notes-viewer.h			\
 	nautilus-profiler.c			\
 	nautilus-profiler.h			\
 	nautilus-property-browser.c     	\
