Add new extensions-style sidebar provider interface
2004-11-08  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/Makefile.am:
	* libnautilus-private/nautilus-sidebar-provider.[ch]:
	Add new extensions-style sidebar provider interface

	* src/nautilus-navigation-window.c:
	Use it.

	* src/nautilus-notes-viewer.[ch]:
	Convert notes viewer to new iface

--- a/libnautilus-private/Makefile.am
+++ b/libnautilus-private/Makefile.am
@@ -169,6 +169,8 @@ libnautilus_private_la_SOURCES = \
 	nautilus-search-uri.h \
 	nautilus-sidebar-factory.c \
 	nautilus-sidebar-factory.h \
+	nautilus-sidebar-provider.c \
+	nautilus-sidebar-provider.h \
 	nautilus-sidebar.c \
 	nautilus-sidebar.h \
 	nautilus-sound.c \
