Remove image_properties subdir
2004-11-08  Alexander Larsson  <alexl@redhat.com>

	* components/Makefile.am:
	Remove image_properties subdir

	* src/Makefile.am:
	* src/nautilus-application.c: (nautilus_application_instance_init):
	* src/nautilus-image-properties-page.[ch]:
	Image property page using new system

	* src/nautilus-notes-viewer.c:
	add static

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,6 +13,7 @@ INCLUDES =							\
 	-I$(top_srcdir)/cut-n-paste-code			\
 	-I$(top_builddir)/libnautilus-private 			\
 	$(CORE_CFLAGS) 						\
+	$(EXIF_CFLAGS)						\
 	-DDATADIR=\""$(datadir)"\" 				\
 	-DGNOMELOCALEDIR=\""$(prefix)/${DATADIRNAME}/locale"\"	\
 	-DLIBDIR=\""$(libdir)"\" 				\
@@ -30,6 +31,7 @@ LDADD =\
 	$(top_builddir)/libnautilus-private/libnautilus-private.la  \
         $(top_builddir)/cut-n-paste-code/gsequence/libgsequence.la \
 	$(CORE_LIBS) \
+	$(EXIF_LIBS) \
 	$(POPT_LIBS) \
 	$(NULL)
 
@@ -117,6 +119,8 @@ nautilus_SOURCES = \
 	nautilus-switchable-navigation-bar.h	\
 	nautilus-switchable-search-bar.c	\
 	nautilus-switchable-search-bar.h	\
+	nautilus-image-properties-page.c	\
+	nautilus-image-properties-page.h	\
 	nautilus-window-manage-views.c		\
 	nautilus-window-manage-views.h		\
 	nautilus-window-menus.c         	\
