--- a/nautilus-file-management-properties.desktop.in
+++ b/nautilus-file-management-properties.desktop.in
@@ -8,6 +8,7 @@ Terminal=false
 Type=Application
 StartupNotify=true
 Categories=GNOME;Application;Settings;
+OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=Preferences
