don't define GNOMELOCALEDIR in INCLUDES.
2004-01-11  James Henstridge  <james@jamesh.id.au>

	* test/Makefile.am: don't define GNOMELOCALEDIR in INCLUDES.

	* src/Makefile.am: remove desktop and server files on clean.
	Don't include GNOMELOCALEDIR in INCLUDES, since it is now defined
	in config.h.

	* Makefile.am: remove desktop files on clean, and intltool files
	on distclean.

	* acconfig.h: remove, since it isn't needed anymore.

	* configure.in: remove some macro calls not needed with newer
	automakes, and use newer versions of some macros.

	* autogen.sh: require Automake >= 1.7.

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,6 +28,7 @@ EXTRA_DIST=					\
 	COPYING-DOCS				\
 	HACKING					\
 	MAINTAINERS				\
+	nautilus.spec				\
 	nautilus.spec.in			\
 	nautilus.desktop			\
 	nautilus.desktop.in			\
@@ -43,5 +44,9 @@ EXTRA_DIST=					\
 	$(desktop_in_files)			\
 	$(NULL)
 
-dist-hook: nautilus.spec
-	cp nautilus.spec $(distdir)
+CLEANFILES = $(desktop_DATA)
+
+DISTCLEANFILES = \
+  intltool-extract \
+  intltool-merge \
+  intltool-update
