Add nautilus-connect-to-server-dialog-main.c Update Update
2005-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add nautilus-connect-to-server-dialog-main.c
	* nb.po: Update
	* no.po: Update

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -95,3 +95,4 @@ src/nautilus-window-toolbars.c
 src/nautilus-window.c
 src/nautilus-zoom-control.c
 src/network-scheme.desktop.in
+src/nautilus-connect-server-dialog-main.c
