--- a/nautilus-home.desktop.in
+++ b/nautilus-home.desktop.in
@@ -4,7 +4,7 @@ _Name=Home Folder
 _Comment=View your home folder in the Nautilus file manager
 TryExec=nautilus 
 Exec=nautilus
-Icon=gnome-home
+Icon=gnome-fs-home
 Terminal=false
 Type=Application
 Categories=Application;Core;
