--- a/nautilus.desktop.in
+++ b/nautilus.desktop.in
@@ -7,7 +7,7 @@ Exec=nautilus --no-desktop --browser
 Icon=file-manager
 Terminal=false
 Type=Application
-Categories=Application;Core;
+Categories=GNOME;Application;System;Utility;Core;
 OnlyShowIn=GNOME;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
