--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -295,6 +295,7 @@
       <type>string</type>
       <default>Sans 10</default>
       <locale name="C">
+         <default><!-- Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone. -->Sans 10</default>
          <short>Desktop font</short>
 	 <long>
 	  The font description used for the icons on the desktop.
