Add new default folder handler NoDisplay desktop file
2005-02-09  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* nautilus-folder-handler.desktop.in:
	Add new default folder handler NoDisplay desktop file

	* nautilus.desktop.in:
	Add %U to exec line

	* src/Nautilus_shell.server.in:
	Remove all the bonobo components we no longer support

	* src/file-manager/fm-directory-view.c:
	Allow open with menu on folders (#151747)

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,7 @@ desktop_in_files = 					\
 	nautilus.desktop.in				\
 	nautilus-home.desktop.in			\
 	nautilus-computer.desktop.in			\
+	nautilus-folder-handler.desktop.in		\
 	nautilus-file-management-properties.desktop.in
 
 SUBDIRS =			\
