--- a/nautilus-folder-handler.desktop.in
+++ b/nautilus-folder-handler.desktop.in
@@ -1,14 +1,12 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=File Browser
-_Comment=Browse the filesystem with the file manager
-TryExec=nautilus
-Exec=nautilus --no-desktop --browser %U
-Icon=file-manager
+Name=Open Folder
+TryExec=nautilus 
+Exec=nautilus %U
+NoDisplay=true
 Terminal=false
 Type=Application
-Categories=GNOME;Application;System;Utility;Core;
-OnlyShowIn=GNOME;
+MimeType=x-directory/gnome-default-handler
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
