Enable startup notification.
2005-02-14  Alexander Larsson  <alexl@redhat.com>

	* data/applications.desktop.in:
	* data/favorites.desktop.in:
	* src/network-scheme.desktop.in:
	* nautilus-computer.desktop.in:
	* nautilus-folder-handler.desktop.in:
	* nautilus-home.desktop.in:
	* nautilus.desktop.in:
	Enable startup notification.

	* src/nautilus-application.c:
	* src/nautilus-application.h:
	* src/nautilus-bookmarks-window.c:
	* src/nautilus-connect-server-dialog-nonmain.c:
	* src/nautilus-location-bar.c:
	* src/nautilus-main.c:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-shell-interface.idl:
	* src/nautilus-shell.c:
	* src/nautilus-window-manage-views.c:
	* src/nautilus-window-private.h:
	* src/nautilus-window.c:
	Handle startup notification across corba activation.
	Patch from Elijah Newren <newren@gmail.com>

--- a/data/applications.desktop.in
+++ b/data/applications.desktop.in
@@ -5,4 +5,5 @@ _Comment=Browse available software
 URL=applications:///
 Icon=gnome-logo-icon-transparent.png
 Terminal=false
+StartupNotify=true
 Type=Link
