--- a/nautilus-computer.desktop.in
+++ b/nautilus-computer.desktop.in
@@ -6,6 +6,7 @@ TryExec=nautilus
 Exec=nautilus computer:
 Icon=gnome-fs-client
 Terminal=false
+StartupNotify=true
 Type=Application
 Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
