--- a/nautilus-folder-handler.desktop.in
+++ b/nautilus-folder-handler.desktop.in
@@ -5,6 +5,7 @@ TryExec=nautilus
 Exec=nautilus %U
 NoDisplay=true
 Terminal=false
+StartupNotify=true
 Type=Application
 MimeType=x-directory/gnome-default-handler
 X-GNOME-Bugzilla-Bugzilla=GNOME
