--- a/nautilus-home.desktop.in
+++ b/nautilus-home.desktop.in
@@ -6,6 +6,7 @@ TryExec=nautilus
 Exec=nautilus
 Icon=gnome-fs-home
 Terminal=false
+StartupNotify=true
 Type=Application
 Categories=Application;Core;
 X-GNOME-Bugzilla-Bugzilla=GNOME
