--- a/nautilus.desktop.in
+++ b/nautilus.desktop.in
@@ -6,6 +6,7 @@ TryExec=nautilus
 Exec=nautilus --no-desktop --browser %U
 Icon=file-manager
 Terminal=false
+StartupNotify=true
 Type=Application
 Categories=GNOME;Application;System;Utility;Core;
 OnlyShowIn=GNOME;
