--- a/src/network-scheme.desktop.in
+++ b/src/network-scheme.desktop.in
@@ -5,6 +5,7 @@ _Comment=View your network servers in the Nautilus file manager
 TryExec=nautilus
 Exec=nautilus network:
 Terminal=false
+StartupNotify=true
 Type=Application
 Icon=gnome-fs-network
 Categories=Application;Core;
