New svg icon from Corey Woodworth <CoreyWoodworth@gmail.com>
2005-03-31  Martin Wehner  <martin.wehner@gmail.com>

	* icons/audio.svg:
	New svg icon from Corey Woodworth <CoreyWoodworth@gmail.com>

	* icons/audio.png:
	Remove old file.

	* icons/Makefile.am:
	Install new icon.

	* libnautilus-private/nautilus-icon-canvas-item.c:
	(real_map_pixbuf):
	Use svg instead of bitmap audio preview emblem.

	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -13,7 +13,7 @@ icondir = $(datadir)/pixmaps/nautilus
 
 icon_DATA =\
 	Search.png \
-	audio.png \
+	audio.svg \
 	backgrounds.png \
 	chit_frame.png \
 	colors.png \
