--- a/configure.in
+++ b/configure.in
@@ -1,25 +1,29 @@
+AC_PREREQ(2.54)
+
+dnl ===========================================================================
+
+m4_define(art_minver,                  2.3.10)
+m4_define(bonobo_activation_minver,    2.1.0)
+m4_define(bonobo_minver,               2.1.0)
+m4_define(eel_minver,                  2.10.1)
+m4_define(esound_minver,               0.2.27)
+m4_define(glib_minver,                 2.6.0)
+m4_define(gnome_desktop_minver,        2.9.91)
+m4_define(gnome_minver,                2.1.1)
+m4_define(gnome_ui_minver,             2.6.0)
+m4_define(gnome_vfs_minver,            2.9.1)
+m4_define(orbit_minver,                2.4.0)
+m4_define(pango_minver,                1.1.2)
+m4_define(gtk_minver,                  2.6.0)
+m4_define(rsvg_minver,                 2.0.1)
+m4_define(xml_minver,                  2.4.7)
+m4_define(startup_notification_minver, 0.5)
+m4_define(exif_minver,                 0.5.12)
+
 AC_INIT(nautilus, 2.11.1,
         [http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus])
 
-m4_version_prereq([2.59])
-
-m4_define([art_minver],                  [2.3.10])
-m4_define([bonobo_activation_minver],    [2.1.0])
-m4_define([bonobo_minver],               [2.1.0])
-m4_define([eel_minver],                  [2.10.1])
-m4_define([glib_minver],                 [2.6.0])
-m4_define([gnome_desktop_minver],        [2.9.91])
-m4_define([gnome_minver],                [2.1.1])
-m4_define([gnome_ui_minver],             [2.6.0])
-m4_define([gnome_vfs_minver],            [2.9.1])
-m4_define([orbit_minver],                [2.4.0])
-m4_define([pango_minver],                [1.1.2])
-m4_define([gtk_minver],                  [2.6.0])
-m4_define([rsvg_minver],                 [2.0.1])
-m4_define([xml_minver],                  [2.4.7])
-m4_define([startup_notification_minver], [0.5])
-m4_define([exif_minver],                 [0.5.12])
-
+dnl ===========================================================================
 
 AC_CONFIG_SRCDIR(src)
 AC_CONFIG_HEADERS(config.h)
@@ -32,7 +36,8 @@ AC_SUBST(ART_REQUIRED, [art_minver])
 AC_SUBST(BONOBO_ACTIVATION_REQUIRED, [bonobo_activation_minver])
 AC_SUBST(BONOBO_REQUIRED, [bonobo_minver])
 AC_SUBST(EEL_REQUIRED, [eel_minver])
-AC_SUBST(GLIB_REQUIRED, [glib_minver])
+AC_SUBST(ESOUND_REQUIRED, [esound_minver])
+AC_SUBST(GLIB_REQUIRED [glib_minver])
 AC_SUBST(GNOME_DESKTOP_REQUIRED, [gnome_desktop_minver])
 AC_SUBST(GNOME_REQUIRED, [gnome_minver])
 AC_SUBST(GNOME_UI_REQUIRED, [gnome_ui_minver])
@@ -58,7 +63,7 @@ AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
 
-if $PKG_CONFIG --atleast-version $STARTUP_NOTIFICATION_REQUIRED libstartup-notification-1.0; then
+if $PKG_CONFIG --atleast-version startup_notification_minver libstartup-notification-1.0; then
   echo "Building with libstartup-notification"
   AC_DEFINE(HAVE_STARTUP_NOTIFICATION, 1,
             [define to enable startup notification support])
@@ -73,23 +78,24 @@ fi
 
 AC_SUBST(STARTUP_NOTIFICATION_PACKAGE)
 
-PKG_CHECK_MODULES(ALL,
- [bonobo-activation-2.0 >= $BONOBO_ACTIVATION_REQUIRED
-  eel-2.0 >= $EEL_REQUIRED
-  glib-2.0 >= $GLIB_REQUIRED
-  gnome-desktop-2.0 >= $GNOME_DESKTOP_REQUIRED
-  gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED
-  ORBit-2.0 >= $ORBIT_REQUIRED
-  pango >= $PANGO_REQUIRED
-  gtk+-2.0 >= $GTK_REQUIRED
-  libart-2.0 >= $ART_REQUIRED
-  libbonobo-2.0 >= $BONOBO_REQUIRED
-  libgnome-2.0 >= $GNOME_REQUIRED
-  libgnomeui-2.0 >= $GNOME_UI_REQUIRED
-  librsvg-2.0 >= $RSVG_REQUIRED
-  libxml-2.0 >= $XML_REQUIRED
+PKG_CHECK_MODULES(ALL, 
+ [esound >= esound_minver dnl
+  bonobo-activation-2.0 >= bonobo_activation_minver dnl
+  eel-2.0 >= eel_minver dnl
+  glib-2.0 >= glib_minver dnl
+  gnome-desktop-2.0 >= gnome_desktop_minver dnl
+  gnome-vfs-2.0 >= gnome_vfs_minver dnl
+  ORBit-2.0 >= orbit_minver dnl
+  pango >= pango_minver dnl
+  gtk+-2.0 >= gtk_minver dnl
+  libart-2.0 >= art_minver dnl
+  libbonobo-2.0 >= bonobo_minver dnl
+  libgnome-2.0 >= gnome_minver dnl
+  libgnomeui-2.0 >= gnome_ui_minver dnl
+  librsvg-2.0 >= rsvg_minver dnl
+  libxml-2.0 >= xml_minver dnl
   $STARTUP_NOTIFICATION_PACKAGE])
-
+dnl ==========================================================================
 
 ALL_LINGUAS="af am ar az be bg bn bs ca cs cy da de el en_CA en_GB es et eu fa fi fr ga gl gu he hi hr hu id is it ja ko li lt lv mi mk ml mn ms nb ne nl nn no nso pa pl pt pt_BR ro ru rw sk sl sq sr sr@Latn sr@ije sv ta th tk tr uk vi wa xh yi zh_CN zh_TW zu"
 
@@ -103,7 +109,7 @@ GLIB_DEFINE_LOCALEDIR(GNOMELOCALEDIR)
 
 AC_PROG_INTLTOOL
 
-
+dnl ==========================================================================
 
 ENABLE_PROFILER=
 AC_ARG_ENABLE(profiler,
@@ -122,8 +128,8 @@ fi
 AC_SUBST(ENABLE_PROFILER)
 AM_CONDITIONAL(ENABLE_PROFILER, test "x$ENABLE_PROFILER" = "x1")
 
-
-
+dnl ==========================================================================
+dnl Check for popt
     
 AC_CHECK_LIB(popt, poptGetArg, POPT_LIBS=-lpopt,
         [AC_CHECK_HEADER(popt.h, , AC_MSG_ERROR([[
@@ -131,27 +137,27 @@ AC_CHECK_LIB(popt, poptGetArg, POPT_LIBS=-lpopt,
 *** ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/ and try again.]]))])
 AC_SUBST(POPT_LIBS)
 	
-
+dnl ==========================================================================
 
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
-
+dnl ==========================================================================
 
 ORBIT_IDL="`$PKG_CONFIG --variable=orbit_idl ORBit-2.0`"
 AC_SUBST(ORBIT_IDL)
 
-
+dnl ==========================================================================
 
 AC_CHECK_FUNCS(setmntent endmntent hasmntopt getmntinfo)
 AC_CHECK_HEADERS(mntent.h sys/mnttab.h sys/vfstab.h sys/cdio.h sys/mount.h sys/mntctl.h sys/vfs.h sys/vmount.h fstab.h)
 			      
-
+dnl ==========================================================================
 
 AC_CHECK_FUNCS(setenv unsetenv putenv)
 
+dnl ==========================================================================
 
-
-
+dnl X
 
 x_libs="`$PKG_CONFIG --libs pangox`"
 case x_libs in
@@ -186,9 +192,9 @@ AC_CHECK_LIB(X11, XOpenDisplay, :,
 	AC_MSG_ERROR([*** libX11 not found.  Check 'config.log' for more details.]),
 	$x_libs_for_checks) 
 
+dnl ==========================================================================
 
-
-
+dnl jw (for doc build)
 
 AC_PATH_PROG(JW,jw,no)
 if test x$JW = xno; then
@@ -199,9 +205,9 @@ fi
 AM_CONDITIONAL(HAVE_JW, test "x$HAVE_JW" = "xyes")
 AC_SUBST(HAVE_JW)
 
+dnl ==========================================================================
 
-
-
+dnl exif checking
 
 AC_MSG_CHECKING(for libExif)
 
@@ -217,9 +223,9 @@ PKG_CHECK_MODULES(EXIF, libexif > exif_minver, [
       AC_SUBST(EXIF_LIBS)
 ])])
 
+dnl ==========================================================================
 
-
-
+dnl Turn on the additional warnings last, so -Werror doesn't affect other tests.
 
 AC_ARG_ENABLE(more-warnings,
 AC_HELP_STRING([--enable-more-warnings], [Maximum compiler warnings]),
@@ -261,31 +267,31 @@ else
 	AC_MSG_RESULT(no)
 fi
 
+dnl ==========================================================================
 
-
-
+dnl gimphwrapbox
 GIMPHWRAPBOX_MODULES="gtk+-2.0"
 GIMPHWRAPBOX_CFLAGS="`$PKG_CONFIG --cflags $GIMPHWRAPBOX_MODULES`"
 AC_SUBST(GIMPHWRAPBOX_CFLAGS)
 
-
+dnl gsequence
 GSEQUENCE_MODULES="glib-2.0"
 GSEQUENCE_CFLAGS="`$PKG_CONFIG --cflags $GSEQUENCE_MODULES`"
 AC_SUBST(GSEQUENCE_CFLAGS)
 	
-
+dnl libegg
 LIBEGG_MODULES="gtk+-2.0 libgnome-2.0"
 LIBEGG_CFLAGS="`$PKG_CONFIG --cflags $LIBEGG_MODULES`"
 AC_SUBST(LIBEGG_CFLAGS)
 
-
+dnl libnautilus-extension
 LIBNAUTILUS_EXTENSION_MODULES="glib-2.0 gtk+-2.0 gnome-vfs-2.0"
 LIBNAUTILUS_EXTENSION_CFLAGS="`$PKG_CONFIG --cflags $LIBNAUTILUS_EXTENSION_MODULES`"
 AC_SUBST(LIBNAUTILUS_EXTENSION_CFLAGS)
 LIBNAUTILUS_EXTENSION_LIBS="`$PKG_CONFIG --libs $LIBNAUTILUS_EXTENSION_MODULES`"
 AC_SUBST(LIBNAUTILUS_EXTENSION_LIBS)
 
-
+dnl core nautilus (must list bonobo-activation and libbonobo because idldir does not respect "requires")
 CORE_MODULES="eel-2.0 librsvg-2.0 bonobo-activation-2.0 libbonobo-2.0 esound gnome-desktop-2.0 $EXTRA_CORE_MODULES"
 CORE_CFLAGS="`$PKG_CONFIG --cflags $CORE_MODULES` $x_cflags"
 AC_SUBST(CORE_CFLAGS)
@@ -297,24 +303,24 @@ AC_SUBST(CORE_IDL_INCLUDES)
 DISABLE_DEPRECATED_CFLAGS=""
 
 
+dnl Taken out for now
+dnl	-DGDK_DISABLE_DEPRECATED \
+dnl	-DGDK_PIXBUF_DISABLE_DEPRECATED \
+dnl	-DGTK_DISABLE_DEPRECATED \
+dnl	-DGNOME_DISABLE_DEPRECATED"
 
-
-
-
-
-
-
-
+dnl FIXME: put this back once the registration_id stuff is cleared up.
+dnl	-DBONOBO_DISABLE_DEPRECATED
 
 AC_SUBST(DISABLE_DEPRECATED_CFLAGS)
 
-
+dnl libbackground
 PKG_CHECK_MODULES(CAPPLET, "gtk+-2.0 gconf-2.0 libgnomeui-2.0")
+dnl ==========================================================================
 
-
-
-
-
+dnl ==============================================
+dnl Special GConf section 
+dnl ==============================================
 
 AC_PATH_PROG(GCONFTOOL, gconftool-2, no)
 
@@ -354,7 +360,7 @@ test/Makefile
 
 AC_OUTPUT
 
-
+dnl ==========================================================================
 echo "
 nautilus-$VERSION:
 
