Change comment for translator note of default desktop font to say that
2005-05-12  David Zeuthen  <david@fubar.dk>

        * libnautilus-private/apps_nautilus_preferences.schemas.in:
        Change comment for translator note of default desktop font to
        say that Sans shouldn't never be changed. Fixes bug #138731.

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -295,7 +295,9 @@
       <type>string</type>
       <default>Sans 10</default>
       <locale name="C">
-         <default><!-- Translators: please note this can choose the default font and the size. e.g. "Monospace 8". Please do not translate "Sans". In most cases, this should be left alone. -->Sans 10</default>
+         <default><!-- Translators: please note this can choose the size. e.g.
+"Sans 15". Please do not change "Sans", only change the size if you need to. In
+most cases, this should be left alone. -->Sans 10</default>
          <short>Desktop font</short>
 	 <long>
 	  The font description used for the icons on the desktop.
