Use --no-desktop for default folder handler
2005-05-17  Alexander Larsson  <alexl@redhat.com>

	* nautilus-folder-handler.desktop.in (Exec):
	Use --no-desktop for default folder handler

--- a/nautilus-folder-handler.desktop.in
+++ b/nautilus-folder-handler.desktop.in
@@ -2,7 +2,7 @@
 Encoding=UTF-8
 Name=Open Folder
 TryExec=nautilus 
-Exec=nautilus %U
+Exec=nautilus --no-desktop %U
 NoDisplay=true
 Terminal=false
 StartupNotify=true
