--- a/libnautilus-extension/libnautilus-extension.pc.in
+++ b/libnautilus-extension/libnautilus-extension.pc.in
@@ -2,6 +2,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
+extensiondir=@libdir@/nautilus/extensions-1.0
 
 Name: libnautilus-extension
 Description: A library to create Nautilus view extensions
