Always initialize cut.
2005-06-10  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c: (convert_lines_to_str_list):
	* src/file-manager/fm-tree-view.c: (convert_lines_to_str_list):
	Always initialize cut.

	* configure.in:
	Add --Wno-pointer-sign

	Fix gcc4 compilation (#303491/#307038).
	Based on patches from James M. Cape <jcape@ignore-your.tv>
	and Kjartan Maraas <kmaraas@gnome.org>

--- a/configure.in
+++ b/configure.in
@@ -248,7 +248,7 @@ if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
 	-Werror \
 	$CFLAGS"
 
-	for option in -Wno-strict-aliasing -Wno-sign-compare; do
+	for option in -Wno-strict-aliasing -Wno-sign-compare -Wno-pointer-sign; do
 		SAVE_CFLAGS="$CFLAGS"
 		CFLAGS="$CFLAGS $option"
 		AC_MSG_CHECKING([whether gcc understands $option])
