--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,6 +42,7 @@ src/file-manager/fm-ditem-page.c
 src/file-manager/fm-error-reporting.c
 src/file-manager/fm-icon-container.c
 src/file-manager/fm-icon-view.c
+src/file-manager/fm-list-model.c
 src/file-manager/fm-list-view.c
 src/file-manager/fm-properties-window.c
 src/file-manager/fm-tree-model.c
