Fix handling of notification of .gtk-bookmark file changes.
2005-06-23  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-bookmark-list.c:
	Fix handling of notification of .gtk-bookmark file changes.

	* src/Makefile.am:
	* src/nautilus-window-bookmarks.[ch]:
	* src/nautilus-application.c:
	* src/nautilus-navigation-window-menus.c:
	* src/nautilus-navigation-window.[ch]:
	* src/nautilus-spatial-window-ui.xml:
	* src/nautilus-spatial-window.c:
	* src/nautilus-window-menus.c:
	* src/nautilus-window-private.h:
	* src/nautilus-window.[ch]:
	Move most bookmark stuff to nautilus-window-bookmarks and
	put bookmarks in spatial windows too.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -109,6 +109,8 @@ nautilus_SOURCES = \
 	nautilus-spatial-window.h               \
 	nautilus-throbber.c			\
 	nautilus-throbber.h			\
+	nautilus-window-bookmarks.c		\
+	nautilus-window-bookmarks.h		\
 	nautilus-window-manage-views.c		\
 	nautilus-window-manage-views.h		\
 	nautilus-window-menus.c         	\
