--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -86,5 +86,6 @@ src/nautilus-window-menus.c
 src/nautilus-window-private.h
 src/nautilus-window-toolbars.c
 src/nautilus-window.c
+src/nautilus-window-bookmarks.c
 src/nautilus-zoom-control.c
 src/network-scheme.desktop.in
