Add x-directory/normal and inode/directory to the list of mime types this
2005-07-05  Joe Shaw  <joeshaw@novell.com>

	* nautilus-folder-handler.desktop.in: Add x-directory/normal
	and inode/directory to the list of mime types this desktop file
	can handle.

--- a/nautilus-folder-handler.desktop.in
+++ b/nautilus-folder-handler.desktop.in
@@ -7,7 +7,7 @@ NoDisplay=true
 Terminal=false
 StartupNotify=true
 Type=Application
-MimeType=x-directory/gnome-default-handler
+MimeType=x-directory/gnome-default-handler;x-directory/normal;inode/directory
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=nautilus
 X-GNOME-Bugzilla-Component=general
