Patch from Jamie McCracken <jamiemcc@blueyonder.co.uk>
2005-07-08  Alexander Larsson  <alexl@redhat.com>

        Patch from Jamie McCracken <jamiemcc@blueyonder.co.uk>

	* src/Makefile.am:
	* src/nautilus-pathbar.[ch]:
	New pathbar widget. Based on code from gtk.

	* src/nautilus-navigation-window.[ch]:
	* src/nautilus-window-manage-views.c:
	* src/nautilus-window-private.h:
	Use pathbar in browser window.

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	* libnautilus-private/nautilus-global-preferences.[ch]:
	Add always_use_location_entry prefs.

	* src/nautilus-navigation-window-menus.c:
	Whitespace fixup.

--- a/libnautilus-private/apps_nautilus_preferences.schemas.in
+++ b/libnautilus-private/apps_nautilus_preferences.schemas.in
@@ -52,6 +52,21 @@
          </long>
       </locale>
     </schema>
+
+    <schema>
+      <key>/schemas/apps/nautilus/preferences/always_use_location_entry</key>
+      <applyto>/apps/nautilus/preferences/always_use_location_entry</applyto>
+      <owner>nautilus</owner>
+      <type>bool</type>
+      <default>false</default>
+      <locale name="C">
+         <short>Always use the location entry, instead of the pathbar</short>
+         <long>
+           If set to true, then Nautilus browser windows will always use a textual
+	   input entry for the location toolbar, instead of the pathbar.
+         </long>
+      </locale>
+    </schema>
     
     <schema>
       <key>/schemas/apps/nautilus/preferences/confirm_trash</key>
