--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -73,6 +73,7 @@ src/nautilus-navigation-window-menus.c
 src/nautilus-navigation-window-ui.xml
 src/nautilus-navigation-window.c
 src/nautilus-notes-viewer.c
+src/nautilus-pathbar.c
 src/nautilus-places-sidebar.c
 src/nautilus-property-browser.c
 src/nautilus-shell-ui.xml
